some design fix - automatic scroll,margin right issue fixed by hiding scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
+@import url('../fonts/fontawesome-free-5.12.1-web/css/all.min.css');
 *{
 	margin: 0;
 	padding: 0;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+}
+body::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome */
 }
 
 /* navbar */
@@ -11,7 +17,7 @@
 }
 .caletal-nav .nav-link {
     font-weight: 600;
-    padding: 18px 0px !important;
+    padding: 18px 0px;
     margin: 0 0 0 31px;
 }
 /* navbar end */
